--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "watch": "nodemon index.js",
-    "start:prod": "PORT=5001 NODE_ENV=production node index.js"
+    "watch": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
